--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,5 +13,6 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
             channel: 'beta'
+      - run: flutter channel
       - run: flutter pub get
       - run: flutter build web
